--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,10 @@
         <activity
             android:name=".ClassicEasyActivity"
             android:launchMode="singleTask">
-
+        </activity>
+        <activity
+            android:name=".ClassicGameClearedActivity"
+            android:launchMode="singleTask">
         </activity>
         <activity
             android:name=".MainActivity"
