--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WordSearchGame">
+        <activity android:name=".ClassicMediumActivity"></activity>
         <activity android:name=".GamePausedActivity" />
         <activity
             android:name=".HistoryActivity"
@@ -18,10 +19,10 @@
             android:launchMode="singleTask" />
         <activity
             android:name=".ClassicEasyActivity"
-            android:launchMode="singleTask"></activity>
+            android:launchMode="singleTask" />
         <activity
             android:name=".ClassicGameClearedActivity"
-            android:launchMode="singleTask"></activity>
+            android:launchMode="singleTask" />
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTask">
